allprojects {

	//IDE
	apply plugin:"java"
	apply plugin:"eclipse"
	apply plugin:"idea"

	//Other
	apply plugin: "maven"
	apply plugin: "jacoco"

	//Java version
	sourceCompatibility = 1.8
	targetCompatibility = 1.8

	//Project properties
	project.group = 'de.upb.isys'
	project.version = '0.0.1-SNAPSHOT'

	//Repositories
	repositories {
		mavenLocal()
		maven { url "https://jitpack.io" }
		maven { url "http://clojars.org/repo/" }
		maven { url "https://plugins.gradle.org/m2/" }
		maven { url "https://nexus.cs.upb.de/repository/maven-releases/" }
		mavenCentral()
		jcenter()
	}


	//Dependencies for all(!) projects
	dependencies {

	}

	//Always check for updates in SNAPSHOT versions, do not cache
	configurations.all {
		// check for updates every build
		resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
	}
}

dependencies {
	compile project(":JAICore:jaicore-basic")
	compile project(":JAICore:jaicore-concurrent")
	compile project(":JAICore:jaicore-experiments")
	compile project(":JAICore:jaicore-graph")
	compile project(":JAICore:jaicore-graphvisualizer")
	compile project(":JAICore:jaicore-logic")
	compile project(":JAICore:jaicore-math")
	compile project(":JAICore:jaicore-ml")
	compile project(":JAICore:jaicore-planning")
	compile project(":JAICore:jaicore-processes")
	compile project(":JAICore:jaicore-search")
	compile project(":JAICore:jaicore-services")
}